# AI_Basics

./: README.md  pyproject.toml  tictactoe.py
1_planning/: README.md
2_optimising/: README.md  main.py  toast.ipynb
