[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = ""
authors = ["Takahiro Mitsui <takahiro.mitsui@code.berlin>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"
black = "^23.3.0"
pandas = "^2.0.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
